# fastfaceswapper-tensorrt

./: .clang-format  .devcontainer.json  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
data/test/dataset/annotations/: regjeringen.txt
include/: trt_utils.hpp
include/cuda_utils/: cuda_check_error.hpp  cuda_unique_ptr.hpp  stream_unique_ptr.hpp
include/cv_utils/: cv_utils.hpp
include/ffswp/: ffswp.hpp
include/tensorrt_utils/: inference_engine.hpp  tensorrt_utils.hpp
onnx/: .gitignore  download_onnx.sh
runtime/: CMakeLists.txt  anonymize.cpp  fswp.cpp
tools/: CMakeLists.txt  build_engine.cpp
